# nickname

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  nicknametree.cpp  nicknametree.h
test/: CMakeLists.txt  gtest.cpp  nicknametest.cpp  nicknametreeaccessor.cpp  nicknametreeaccessor.h
